blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-depl
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: client
  template: 
  # The template describes how all different pods should be created by deployment
    metadata:
      labels:
      # The label is an identifier for the pod that should be created
        app: client
    spec:
      containers: 
        - name: client
          image: itaybarber/client
---
# The --- is to create anotehr object inside the same yaml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
