blog/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: comments-depl
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: comments
  template: 
  # The template describes how all different pods should be created by deployment
    metadata:
      labels:
      # The label is an identifier for the pod that should be created
        app: comments
    spec:
      containers: 
        - name: comments
          image: itaybarber/comments
---
# The --- is to create anotehr object inside the same yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
