blog/infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: event-bus-depl
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: event-bus
  template: 
  # The template describes how all different pods should be created by deployment
    metadata:
      labels:
      # The label is an identifier for the pod that should be created
        app: event-bus
    spec:
      containers: 
        - name: event-bus
          image: itaybarber/event-bus
---
# The --- is to create anotehr object inside the same yaml
apiVersion: v1
kind: Service
metadata: 
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
