blog/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: moderation-depl
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: moderation
  template: 
  # The template describes how all different pods should be created by deployment
    metadata:
      labels:
      # The label is an identifier for the pod that should be created
        app: moderation
    spec:
      containers: 
        - name: moderation
          image: itaybarber/moderation
---
# The --- is to create anotehr object inside the same yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
