blog/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: query-depl
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: query
  template: 
  # The template describes how all different pods should be created by deployment
    metadata:
      labels:
      # The label is an identifier for the pod that should be created
        app: query
    spec:
      containers: 
        - name: query
          image: itaybarber/query
---
# The --- is to create anotehr object inside the same yaml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
